updates with project code structuring
